# nebolab_gazebo_sim

./: package.xml  setup.cfg  setup.py
ccta2024_scalable/: CCTA_GoToGoal.py  expROS2_main.py  vicon_localization.py
ccta2024_scalable/scenarios_unicycle/: CCTA2024_Controller.py  CCTA2024_FormationObstacleLidar_scenario.py
ccta2024_scalable/scenarios_unicycle/scenarios/: formation4_mixed.yml  formation4_shrinking.yml
ccta2024_scalable/simulator/: data_logger.py  detect_obstacle.py  timeProfiling.py
launch/: CCTA_controller.launch.py  CCTA_setup.launch.py  empty_world.launch.py  ref_multi.py  robot_state_publisher.launch.py  spawn_tb3.launch.py  totally_empty.launch.py  vicon_localization.launch.py
models/example_room/: model.config  model.sdf
models/formation4_enlarging/: model.sdf
models/formation4_exp/: model.sdf
models/formation4_full/: model.sdf
models/formation4_mixed/: model.sdf
models/formation4_shrinking/: model.config  model.sdf
models/turtlebot3_burger/: model-1_4.sdf
models/turtlebot3_enlarge/: model.sdf
nebolab_gazebo_sim/: nebolab_experiment_setup.py  sdf_convert.py  spawn_turtlebot.py  vicon_localization.py  yaml_to_world.py
nebolab_gazebo_sim/control_lib/: cbf_single_integrator.py  go_to_goal.py
nebolab_gazebo_sim/controller/: CCTA_GoToGoal.py
nebolab_gazebo_sim/scenarios_unicycle/scenarios/: formation4_enlarging.yml  (+3 more)
nebolab_gazebo_sim/simulator/: dynamics.py  plot_2D_unicycle.py
scenarios/: example_scenario.yml
worlds/: empty_world.world  example_world.world
worlds/empty_worlds/: no_robot.model  no_robot.world
